Update to JDK19
Remove the native and GPU conf energy calculators (for now). The foreign
API has changed. At some point we can come back and rewrite these for
newer JDKs.