@@ -3,14 +3,12 @@ package osprey
 
 object Jvm {
 
-	const val javaLangVersion = 17
-
 	const val packagePath = "edu/duke/cs/osprey"
 
 	// add the module dependencies directly to the javac args
 	// I don't think gradle has a good way to handle this yet?
 	val moduleArgs = listOf(
-		"--add-modules=jdk.incubator.foreign"
+		"--enable-preview"
 	)
 
 	fun addModuleArgs(args: MutableList<String>?) {
